# japanki

./: .gitignore  Cargo.toml  README.md  install.sh  main.py
.japanki/: progress.yaml  words.csv
data/: words.csv
python/: README.md  main.py
src/: category.rs  config.rs  main.rs  read_file_test.rs  vocab.rs
