[package]
name = "japanki"
version = "0.1.0"
authors = ["Tyson Wu <wukwanyutyson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
serde = { version = "1.0.188", features = ["serde_derive"] }
