[package]
name = "japanki"
version = "0.1.0"
authors = ["Tyson Wu <wukwanyutyson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
csv = "1.3.0"
dirs = "5.0.1"
inquire = "0.6.2"
rand = "0.8.5"
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_yaml = "0.9.25"
strum = "0.25.0"
strum_macros = "0.25.2"
tabled = "0.14.0"
